SeqDiagramsParser.py
# Generated from SeqDiagrams.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SeqDiagramsParser ( Parser ):

    grammarFileName = "SeqDiagrams.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'sequence'", "'actor'", "'object'", "'boundary'", 
                     "'control'", "'entity'", "'database'", "'for'", "'while'", 
                     "'alt'", "'case'", "'opt'", "'par'", "'new'", "'delete'", 
                     "'note'", "'activate'", "'deactivate'", "'->'", "'=>'", 
                     "'-->'", "'-x>'", "'<->'", "'-o>'", "'|<'", "<INVALID>", 
                     "'{'", "'}'", "'('", "')'", "':'", "';'", "'::'" ]

    symbolicNames = [ "<INVALID>", "SEQUENCE", "ACTOR", "OBJECT", "BOUNDARY", 
                      "CONTROL", "ENTITY", "DATABASE", "FOR", "WHILE", "ALT", 
                      "CASE", "OPT", "PAR", "NEW", "DELETE", "NOTE", "ACTIVATE", 
                      "DEACTIVATE", "ARROW", "ASYNC", "RETURN", "XSYNC", 
                      "TWO_WAY_ASYNC", "TIMEOUT", "BULKING", "STEREOTYPE", 
                      "LBRACE", "RBRACE", "LPAREN", "RPAREN", "COLON", "SEMI", 
                      "DOUBLE_COLON", "STRING", "WS", "COMMENT" ]

    RULE_sequenceDiagram = 0
    RULE_lifeline = 1
    RULE_participant = 2
    RULE_diagramName = 3
    RULE_actor = 4
    RULE_object = 5
    RULE_boundary = 6
    RULE_control = 7
    RULE_entity = 8
    RULE_database = 9
    RULE_objectName = 10
    RULE_objectOnly = 11
    RULE_objectClass = 12
    RULE_classOnly = 13
    RULE_classPackage = 14
    RULE_objectClassPackage = 15
    RULE_interaction = 16
    RULE_message = 17
    RULE_synchronous = 18
    RULE_asynchronous = 19
    RULE_returnMessage = 20
    RULE_xsynchronous = 21
    RULE_twoWayAsync = 22
    RULE_timeout = 23
    RULE_bulking = 24
    RULE_loop = 25
    RULE_conditional = 26
    RULE_altCase = 27
    RULE_optional = 28
    RULE_parallel = 29
    RULE_lifecycle = 30
    RULE_newObject = 31
    RULE_deleteObject = 32
    RULE_activation = 33
    RULE_deactivation = 34
    RULE_note = 35
    RULE_stereotype = 36
    RULE_synchronousStereo = 37
    RULE_returnStereo = 38
    RULE_xsynchronousStereo = 39
    RULE_twoWayAsyncStereo = 40
    RULE_timeoutStereo = 41
    RULE_bulkingStereo = 42
    RULE_asynchronousStereo = 43

    ruleNames =  [ "sequenceDiagram", "lifeline", "participant", "diagramName", 
                   "actor", "object", "boundary", "control", "entity", "database", 
                   "objectName", "objectOnly", "objectClass", "classOnly", 
                   "classPackage", "objectClassPackage", "interaction", 
                   "message", "synchronous", "asynchronous", "returnMessage", 
                   "xsynchronous", "twoWayAsync", "timeout", "bulking", 
                   "loop", "conditional", "altCase", "optional", "parallel", 
                   "lifecycle", "newObject", "deleteObject", "activation", 
                   "deactivation", "note", "stereotype", "synchronousStereo", 
                   "returnStereo", "xsynchronousStereo", "twoWayAsyncStereo", 
                   "timeoutStereo", "bulkingStereo", "asynchronousStereo" ]

    EOF = Token.EOF
    SEQUENCE=1
    ACTOR=2
    OBJECT=3
    BOUNDARY=4
    CONTROL=5
    ENTITY=6
    DATABASE=7
    FOR=8
    WHILE=9
    ALT=10
    CASE=11
    OPT=12
    PAR=13
    NEW=14
    DELETE=15
    NOTE=16
    ACTIVATE=17
    DEACTIVATE=18
    ARROW=19
    ASYNC=20
    RETURN=21
    XSYNC=22
    TWO_WAY_ASYNC=23
    TIMEOUT=24
    BULKING=25
    STEREOTYPE=26
    LBRACE=27
    RBRACE=28
    LPAREN=29
    RPAREN=30
    COLON=31
    SEMI=32
    DOUBLE_COLON=33
    STRING=34
    WS=35
    COMMENT=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SequenceDiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEQUENCE(self):
            return self.getToken(SeqDiagramsParser.SEQUENCE, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def LBRACE(self):
            return self.getToken(SeqDiagramsParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SeqDiagramsParser.RBRACE, 0)

        def lifeline(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeqDiagramsParser.LifelineContext)
            else:
                return self.getTypedRuleContext(SeqDiagramsParser.LifelineContext,i)


        def interaction(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SeqDiagramsParser.InteractionContext)
            else:
                return self.getTypedRuleContext(SeqDiagramsParser.InteractionContext,i)


        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_sequenceDiagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSequenceDiagram" ):
                listener.enterSequenceDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSequenceDiagram" ):
                listener.exitSequenceDiagram(self)




    def sequenceDiagram(self):

        localctx = SeqDiagramsParser.SequenceDiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sequenceDiagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(SeqDiagramsParser.SEQUENCE)
            self.state = 89
            self.match(SeqDiagramsParser.STRING)
            self.state = 90
            self.match(SeqDiagramsParser.LBRACE)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 91
                    self.lifeline() 
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 17179883264) != 0):
                self.state = 97
                self.interaction()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(SeqDiagramsParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LifelineContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def participant(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ParticipantContext,0)


        def SEMI(self):
            return self.getToken(SeqDiagramsParser.SEMI, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_lifeline

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLifeline" ):
                listener.enterLifeline(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLifeline" ):
                listener.exitLifeline(self)




    def lifeline(self):

        localctx = SeqDiagramsParser.LifelineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_lifeline)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.participant()
            self.state = 106
            self.match(SeqDiagramsParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParticipantContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def actor(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ActorContext,0)


        def object_(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ObjectContext,0)


        def boundary(self):
            return self.getTypedRuleContext(SeqDiagramsParser.BoundaryContext,0)


        def control(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ControlContext,0)


        def entity(self):
            return self.getTypedRuleContext(SeqDiagramsParser.EntityContext,0)


        def database(self):
            return self.getTypedRuleContext(SeqDiagramsParser.DatabaseContext,0)


        def diagramName(self):
            return self.getTypedRuleContext(SeqDiagramsParser.DiagramNameContext,0)


        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_participant

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParticipant" ):
                listener.enterParticipant(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParticipant" ):
                listener.exitParticipant(self)




    def participant(self):

        localctx = SeqDiagramsParser.ParticipantContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_participant)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 108
                self.actor()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)
                self.state = 109
                self.object_()
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 110
                self.boundary()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 111
                self.control()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.entity()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 113
                self.database()
                pass
            elif token in [34]:
                self.enterOuterAlt(localctx, 7)
                self.state = 114
                self.diagramName()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagramNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_diagramName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagramName" ):
                listener.enterDiagramName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagramName" ):
                listener.exitDiagramName(self)




    def diagramName(self):

        localctx = SeqDiagramsParser.DiagramNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_diagramName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ACTOR(self):
            return self.getToken(SeqDiagramsParser.ACTOR, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_actor

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterActor" ):
                listener.enterActor(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitActor" ):
                listener.exitActor(self)




    def actor(self):

        localctx = SeqDiagramsParser.ActorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_actor)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.match(SeqDiagramsParser.ACTOR)
            self.state = 120
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECT(self):
            return self.getToken(SeqDiagramsParser.OBJECT, 0)

        def objectName(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ObjectNameContext,0)


        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_object

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObject" ):
                listener.enterObject(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObject" ):
                listener.exitObject(self)




    def object_(self):

        localctx = SeqDiagramsParser.ObjectContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_object)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(SeqDiagramsParser.OBJECT)
            self.state = 123
            self.objectName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BoundaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BOUNDARY(self):
            return self.getToken(SeqDiagramsParser.BOUNDARY, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_boundary

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoundary" ):
                listener.enterBoundary(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoundary" ):
                listener.exitBoundary(self)




    def boundary(self):

        localctx = SeqDiagramsParser.BoundaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_boundary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(SeqDiagramsParser.BOUNDARY)
            self.state = 126
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ControlContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONTROL(self):
            return self.getToken(SeqDiagramsParser.CONTROL, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_control

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterControl" ):
                listener.enterControl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitControl" ):
                listener.exitControl(self)




    def control(self):

        localctx = SeqDiagramsParser.ControlContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_control)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(SeqDiagramsParser.CONTROL)
            self.state = 129
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EntityContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTITY(self):
            return self.getToken(SeqDiagramsParser.ENTITY, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_entity

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEntity" ):
                listener.enterEntity(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEntity" ):
                listener.exitEntity(self)




    def entity(self):

        localctx = SeqDiagramsParser.EntityContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_entity)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(SeqDiagramsParser.ENTITY)
            self.state = 132
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DatabaseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DATABASE(self):
            return self.getToken(SeqDiagramsParser.DATABASE, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_database

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDatabase" ):
                listener.enterDatabase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDatabase" ):
                listener.exitDatabase(self)




    def database(self):

        localctx = SeqDiagramsParser.DatabaseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_database)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(SeqDiagramsParser.DATABASE)
            self.state = 135
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def objectOnly(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ObjectOnlyContext,0)


        def objectClass(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ObjectClassContext,0)


        def classOnly(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ClassOnlyContext,0)


        def classPackage(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ClassPackageContext,0)


        def objectClassPackage(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ObjectClassPackageContext,0)


        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_objectName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectName" ):
                listener.enterObjectName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectName" ):
                listener.exitObjectName(self)




    def objectName(self):

        localctx = SeqDiagramsParser.ObjectNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_objectName)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.objectOnly()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.objectClass()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 139
                self.classOnly()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 140
                self.classPackage()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 141
                self.objectClassPackage()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectOnlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def COLON(self):
            return self.getToken(SeqDiagramsParser.COLON, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_objectOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectOnly" ):
                listener.enterObjectOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectOnly" ):
                listener.exitObjectOnly(self)




    def objectOnly(self):

        localctx = SeqDiagramsParser.ObjectOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_objectOnly)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(SeqDiagramsParser.STRING)
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31:
                self.state = 145
                self.match(SeqDiagramsParser.COLON)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectClassContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SeqDiagramsParser.STRING)
            else:
                return self.getToken(SeqDiagramsParser.STRING, i)

        def COLON(self):
            return self.getToken(SeqDiagramsParser.COLON, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_objectClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectClass" ):
                listener.enterObjectClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectClass" ):
                listener.exitObjectClass(self)




    def objectClass(self):

        localctx = SeqDiagramsParser.ObjectClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_objectClass)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.match(SeqDiagramsParser.STRING)
            self.state = 149
            self.match(SeqDiagramsParser.COLON)
            self.state = 150
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassOnlyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(SeqDiagramsParser.COLON, 0)

        def STRING(self):
            return self.getToken(SeqDiagramsParser.STRING, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_classOnly

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassOnly" ):
                listener.enterClassOnly(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassOnly" ):
                listener.exitClassOnly(self)




    def classOnly(self):

        localctx = SeqDiagramsParser.ClassOnlyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_classOnly)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(SeqDiagramsParser.COLON)
            self.state = 153
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassPackageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(SeqDiagramsParser.COLON, 0)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SeqDiagramsParser.STRING)
            else:
                return self.getToken(SeqDiagramsParser.STRING, i)

        def DOUBLE_COLON(self):
            return self.getToken(SeqDiagramsParser.DOUBLE_COLON, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_classPackage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassPackage" ):
                listener.enterClassPackage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassPackage" ):
                listener.exitClassPackage(self)




    def classPackage(self):

        localctx = SeqDiagramsParser.ClassPackageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_classPackage)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 155
            self.match(SeqDiagramsParser.COLON)
            self.state = 156
            self.match(SeqDiagramsParser.STRING)
            self.state = 157
            self.match(SeqDiagramsParser.DOUBLE_COLON)
            self.state = 158
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ObjectClassPackageContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(SeqDiagramsParser.STRING)
            else:
                return self.getToken(SeqDiagramsParser.STRING, i)

        def COLON(self):
            return self.getToken(SeqDiagramsParser.COLON, 0)

        def DOUBLE_COLON(self):
            return self.getToken(SeqDiagramsParser.DOUBLE_COLON, 0)

        def getRuleIndex(self):
            return SeqDiagramsParser.RULE_objectClassPackage

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterObjectClassPackage" ):
                listener.enterObjectClassPackage(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitObjectClassPackage" ):
                listener.exitObjectClassPackage(self)




    def objectClassPackage(self):

        localctx = SeqDiagramsParser.ObjectClassPackageContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_objectClassPackage)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(SeqDiagramsParser.STRING)
            self.state = 161
            self.match(SeqDiagramsParser.COLON)
            self.state = 162
            self.match(SeqDiagramsParser.STRING)
            self.state = 163
            self.match(SeqDiagramsParser.DOUBLE_COLON)
            self.state = 164
            self.match(SeqDiagramsParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InteractionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def message(self):
            return self.getTypedRuleContext(SeqDiagramsParser.MessageContext,0)


        def loop(self):
            return self.getTypedRuleContext(SeqDiagramsParser.LoopContext,0)


        def conditional(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ConditionalContext,0)


        def optional(self):
            return self.getTypedRuleContext(SeqDiagramsParser.OptionalContext,0)


        def parallel(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ParallelContext,0)


        def activation(self):
            return self.getTypedRuleContext(SeqDiagramsParser.ActivationContext,0)

